# finalproject

./: .gitignore  GETSTARTED.rst  Group 6 Final Report.md  LICENSE  PROPOSAL.md  README.md  README.rst  group6_finalproject-colab.ipynb  pyproject.toml  source.txt  tox.ini  uri.txt
doc/: Makefile
doc/source/: conf.py  index.rst  project01.rst
project01/: EDA.py  fetch.py  lookup.py  parser.py  question1.py  question2.py  question3.py  question4.py
sphinx-doc/source/: conf.py  modules.rst  project01.rst
tests/: conftest.py  test_fetch.py  test_parser.py  test_question3.py
tests/test_parser/: branded_food.csv
tests/test_question3/: rating.csv  simple.csv
