[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "project01"
version = "0.1.0"
description = "Group 6's submission for CS5010's Final Project"
authors = [
    "Nitka Kataria <nk3rf@virginia.edu>",
    "Robert Knuuti <uqq5zz@virginia.edu>",
    "Swaroop Veerabhadrappa <sbv5dn@virginia.edu>",
]
license = "MIT"
readme = "GETSTARTED.rst"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1"
numpy = "^1.20"
seaborn = "^0.11"
requests = "^2.25.1"
sphinx-rtd-theme = "^0.5.1"
ipython = "^7.22.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = { version = "^20.8b1", python = "^3.6" }
sphinx_rtd_theme = "^0.5"
ipython = "^7.22"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
